--- a/package.json
+++ b/package.json
@@ -26,19 +26,20 @@
     "ajv": "^5.2.3",
     "babel-runtime": "^6.26.0",
     "core-js": "^2.5.7",
+    "currency-formatter": "^1.5.5",
     "lodash.range": "^3.2.0",
     "lodash.topath": "^4.5.2",
     "prop-types": "^15.5.8",
-    "url": "^0.11.0",
     "react-native-fast-image": "^7.0.2",
     "react-native-image-crop-picker": "^0.25.3",
+    "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-vector-icons": "^5.0.0",
-    "react-native-keyboard-aware-scroll-view": "^0.8.0"
+    "url": "^0.11.0"
   },
   "devDependencies": {
+    "@react-native-community/eslint-config": "^0.0.5",
     "babel-eslint": "^10.0.1",
     "babel-preset-flow": "^6.23.0",
-    "@react-native-community/eslint-config": "^0.0.5",
     "eslint": "^6.3.0",
     "react-native-vector-icons": "^5.0.0"
   }
