--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-image-crop-picker": "^0.25.3",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-vector-icons": "^5.0.0",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "moment": "2.24.0"
   },
   "devDependencies": {
     "@react-native-community/eslint-config": "^0.0.5",
