--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-native-fast-image": "^7.0.2",
     "react-native-image-crop-picker": "^0.25.3",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
-    "react-native-vector-icons": "^5.0.0",
+    "react-native-vector-icons": "^6.6.0",
     "url": "^0.11.0",
     "moment": "2.24.0"
   },
@@ -41,7 +41,6 @@
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-eslint": "^10.0.1",
     "babel-preset-flow": "^6.23.0",
-    "eslint": "^6.3.0",
-    "react-native-vector-icons": "^5.0.0"
+    "eslint": "^6.3.0"
   }
 }
