--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "prop-types": "^15.5.8",
     "react-native-fast-image": "^7.0.2",
     "react-native-image-crop-picker": "^0.25.3",
-    "react-native-keyboard-aware-scroll-view": "^0.8.0",
+    "react-native-keyboard-aware-scroll-view": "0.9.1",
     "react-native-vector-icons": "^6.6.0",
     "url": "^0.11.0",
     "moment": "2.24.0"
