--- a/Example/package.json
+++ b/Example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Example",
+  "name": "example",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,11 +7,14 @@
     "test": "jest",
     "lint": "eslint .",
     "clear": "watchman watch-del-all && rm -rf $TMPDIR/react-native-packager-cache-* && rm -rf $TMPDIR/metro-bundler-cache-* && rm -rf node_modules/ && yarn cache clean && yarn install",
-    "android:shake": "adb shell input keyevent 82"
+    "android:shake": "adb shell input keyevent 82",
+    "clean:pod": "cd ios && rm -rf Pods/* && rm -rf Podfile.lock && pod install && cd ..",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios"
   },
   "dependencies": {
     "react": "16.8.6",
-    "react-native": "0.60.5",
+    "react-native": "0.61.5",
     "react-native-jsonschema-form": "../"
   },
   "devDependencies": {
