--- a/Example/package.json
+++ b/Example/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.27.0",
     "react": "16.8.6",
     "react-native": "0.61.5",
+    "react-native-easy-grid": "^0.2.2",
     "react-native-fast-image": "7.0.2",
     "react-native-image-crop-picker": "^0.32.2",
     "react-native-jsonschema-form": "../",
