--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-fast-image": ">=7.0.2",
     "react-native-image-crop-picker": ">=0.25.3",
     "react-native-vector-icons": "6.6.0",
-    "moment": ">=2.24.0"
+    "moment": ">=2.24.0",
+    "react-native-easy-grid": ">=0.2.2"
   },
   "dependencies": {
     "ajv": "6.10.2",
