# add range of dates picker

--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "currency-formatter": "^1.5.5",
     "lodash.range": "^3.2.0",
     "lodash.topath": "^4.5.2",
+    "lodash.isempty": "^4.4.0",
     "prop-types": "^15.5.8",
     "react-native-keyboard-aware-scroll-view": "0.9.1",
+    "react-native-calendars": "^1.282.0",
     "url": "^0.11.0"
   },
   "devDependencies": {
