fix lib in peer dependencies

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-vector-icons": "6.6.0",
     "moment": ">=2.24.0",
     "react-native-easy-grid": ">=0.2.2",
+    "@react-native-community/datetimepicker": "3.0.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.4"
   },
   "dependencies": {
@@ -39,7 +40,6 @@
     "lodash.isempty": "^4.4.0",
     "prop-types": "^15.5.8",
     "react-native-calendars": "^1.282.0",
-    "@react-native-community/datetimepicker": "^3.5.2",
     "url": "^0.11.0"
   },
   "devDependencies": {
