--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-native-vector-icons": "6.6.0",
     "moment": ">=2.24.0",
     "react-native-easy-grid": ">=0.2.2",
-    "@react-native-community/datetimepicker": "3.0.6",
+    "@react-native-community/datetimepicker": "^3.5.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.4"
   },
   "dependencies": {
