--- a/package.json
+++ b/package.json
@@ -28,13 +28,9 @@
     "moment": ">=2.24.0",
     "react-native-easy-grid": ">=0.2.2",
     "@react-native-community/datetimepicker": "^3.5.2",
-<<<<<<< HEAD
-    "react-native-permissions": "^3.0.5",
-    "react-native-keyboard-aware-scroll-view": "^0.9.4"
-=======
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
-    "react-native-actionsheet": ">= 2.4.2"
->>>>>>> af6be8edf58cb136340e36fbd6f4bb7291c6a1e6
+    "react-native-actionsheet": ">= 2.4.2",
+    "react-native-permissions": "^3.0.5"
   },
   "dependencies": {
     "ajv": "6.10.2",
