--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": ">=2.24.0",
     "react-native-easy-grid": ">=0.2.2",
     "@react-native-community/datetimepicker": "^3.5.2",
+    "react-native-permissions": "3.0.5",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-actionsheet": ">= 2.4.2"
   },
